<resources>
    <string name="app_name">AutoDashboardApplication</string>
    <string name="car_speed">0</string>
    <string name="speed">km/h</string>
    <string name="battery_full">100%</string>
    <string name="battery_empty">0%</string>
    <string name="remains_text">剩余里程：</string>
    <string name="remains_num">488</string>
    <string name="remains_unit">km</string>
    <string name="recycle">Recycle</string>
    <string name="power">Power</string>
    <string name="power_title">kW</string>
    <string name="time">00:00</string>
    <string name="date">2024年1月1日</string>
    <string name="nap_ready">NAP Ready</string>
    <string name="nap_start">智能行车辅助已开启</string>
    <string name="distance">70m</string>
    <string name="test">测试</string>
    <string name="game_view_content_description">Game view</string>
</resources>