<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:reflect="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/ll_mid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/test" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_space"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />

                <com.qky.autodashboardapplication.ui.ReflectTextView
                    android:id="@+id/tv_car_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car_speed"
                    android:textAlignment="center"
                    android:textColor="@color/main_text"
                    android:textSize="200sp"
                    android:textStyle="bold"
                    reflect:spacingValue="-70dp"
                    reflect:reflectAlpha="120"
                    reflect:reflectHeightMultiple="0.3"
                     />

                <TextView
                    android:id="@+id/tv_speed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/speed"
                    android:textAlignment="center"
                    android:textColor="@color/main_text"
                    android:textSize="30sp" />

                <com.qky.autodashboardapplication.ui.DrawableCenterTextView
                    android:id="@+id/dctv_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@mipmap/ic_launcher"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/main_text"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="700dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_battery_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:text="@string/battery_empty"
                    android:textSize="24sp"
                    android:textColor="@color/main_text"/>

                <LinearLayout
                    android:id="@+id/ll_remains"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_remains"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/remains_text"
                        android:textColor="@color/main_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tv_remain_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/remains_num"
                        android:textAlignment="center"
                        android:textColor="@color/main_text"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/tv_remains_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="5dp"
                        android:paddingStart="10dp"
                        android:text="@string/remains_unit"
                        android:textColor="@color/main_text"
                        android:textSize="24sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_battery_full"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:text="@string/battery_full"
                    android:textAlignment="textEnd"
                    android:textColor="@color/main_text"
                    android:textSize="24sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb_battery"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="700dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:progress="50"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/green" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>